<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#378BC34A"
    android:textAlignment="gravity"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <androidx.cardview.widget.CardView

                android:id="@+id/cv_home_cvd"
                android:layout_width="350dp"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_cardio_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#47141414"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/cardiovascular_diseases_cvd_s"
                    android:textColor="#013834"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_home_dictionary"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_home_cvd">

                <ImageView
                    android:id="@+id/iv_home_dictionary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/home_dictionary"
                    android:textColor="#710A03"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_home_newsletter"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_home_dictionary">

                <ImageView
                    android:id="@+id/iv_home_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/home_newsletter"
                    android:textColor="#610DDB"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_home_quiz"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_home_newsletter">

                <ImageView
                    android:id="@+id/iv_home_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#BAD3C6C6"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/home_knowledge"
                    android:textColor="#F4F8F5"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>